--- a/req-cuti.html
+++ b/req-cuti.html
@@ -105,7 +105,10 @@
       btnForm.style.display = "none";
 
       try {
-        const response = await fetch(`https://script.google.com/macros/s/AKfycbz2Vcne0S9qUcVGCNan2ChqwcPdcqKbHVh3RdnCdK5e-UktyDu-uxVO_5uGccRQtctU/exec?nik=${nik}`);
+        // Ganti URL berikut dengan Apps Script milik Anda
+        const response = await fetch(
+          `https://script.google.com/macros/s/AKfycbz2Vcne0S9qUcVGCNan2ChqwcPdcqKbHVh3RdnCdK5e-UktyDu-uxVO_5uGccRQtctU/exec?nik=${nik}`
+        );
         const data = await response.json();
 
         if (data.nama && data.group) {
@@ -132,10 +135,9 @@
       const nik = encodeURIComponent(btn.dataset.nik);
       const group = encodeURIComponent(btn.dataset.group);
 
-      // Redirect ke form-request.html dengan parameter
+      // Redirect ke form-request.html dengan parameter query string
       const formURL = "form-request.html";
-      const nextPageURL = `${formURL}?nik=${nik}&nama=${nama}&group=${group}`;
-      window.location.href = nextPageURL;
+      window.location.href = `${formURL}?nik=${nik}&nama=${nama}&group=${group}`;
     }
   </script>
 
